--- a/style.css
+++ b/style.css
@@ -19,15 +19,16 @@
 {
     border: 1px solid black;
     position: absolute;
+    display: none;
 }
 
 .column.one
 {
     left: 0;
+    display: block;
 }
 
 .column.two
 {
     right: 0;
-    display: none;
 }
