--- a/style/design.css
+++ b/style/design.css
@@ -34,31 +34,11 @@ input
 }
 
 
-#bible
-{
-    font-family: GeosansLightRegular;
-    font-size: 1em;
-    line-height: 1.5em;
-}
-#bible .column.one
-{
-    box-shadow: 0px 0px 5px black;
-}
-#bible .column .chapter
-{
-    padding: 0.7em;
-}
-#bible .chapter .verse .n
-{
-    font-size: 70%;
-}
-
-
 #title
 {
     position: fixed;
     z-index: 1;
-    width: 100%;
+    width: 50%;
     bottom: 0;
     height: 3em;
 
@@ -82,6 +62,33 @@ input
 {
     font-size: 2em;
     opacity: 0.7;
+}
+
+
+#nav
+{
+    bottom: 0;
+    right: 0;
+}
+
+
+#bible
+{
+    font-family: GeosansLightRegular;
+    font-size: 1em;
+    line-height: 1.5em;
+}
+#bible .column.one
+{
+    box-shadow: 0px 0px 5px black;
+}
+#bible .column .chapter
+{
+    padding: 0.7em;
+}
+#bible .chapter .verse .n
+{
+    font-size: 70%;
 }
 
 
