Verse padding fix
Eliminates the slight dead space between verses that was causing
highlighting issues.

--- a/style/design.css
+++ b/style/design.css
@@ -86,6 +86,10 @@ input
 {
     padding: 0.7em;
 }
+#bible .chapter .verse
+{
+    padding: .3em 0;
+}
 #bible .chapter .verse .n
 {
     font-size: 70%;
