Adjusted and completed note-form population from highlight
PHP backend needs to be created. Auto.ref no longer is consistent with
it's name and needs to be renamed and/or moved.

--- a/script/template/notes.html
+++ b/script/template/notes.html
@@ -1,4 +1,4 @@
-<form id="notes">
+<form id="note" onsubmit="Data.send('note'); return false;">
     <textarea name="content">notes template</textarea>
     <input type="hidden" name="type" value="note"/>
     <input type="hidden" name="start_book"/>
@@ -8,5 +8,5 @@
     <input type="hidden" name="end_chapter"/>
     <input type="hidden" name="end_verse"/>
 
-    <button onclick="Data.send()">send</button>
+    <button>send</button>
 </form>
