Data.get, SQL scripts, ajax.php
A very rough outline of the backend is complete, Data.get now returns
all content related to the current chapter of the current book.

--- a/script/template/form.html
+++ b/script/template/form.html
@@ -1,5 +1,6 @@
 <form id="form" onsubmit="Data.send(); return false;" method="get">
     <textarea name="content"></textarea>
+    <input type="hidden" name="action" value="new"/>
     
     <input type="hidden" name="type" value="note"/>
     <input type="hidden" name="translation"/>
