--- a/script/template/form.html
+++ b/script/template/form.html
@@ -1,22 +1,28 @@
 <form id="form" onsubmit="Data.send(); return false;" method="get">
-    <textarea name="content"></textarea>
+    
+    <span class="reference">
+        <textarea class="start-verse" type="text" name="start_verse"></textarea>
+        -<textarea class="end-verse" type="text" name="end_verse"></textarea>
+    </span>
+
+    <span class="content">
+        <span style="margin-left:8em;">
+        <textarea class="note" name="content_note"></textarea>
+        <textarea class="tag" name="content_tag"></textarea>
+        </span>
+    </span>
+
     <input type="hidden" name="action" value="new"/>
     <input type="hidden" name="translation"/>
 
     <input type="hidden" name="start_book_id"/>
     <input type="hidden" name="start_chapter"/>
-    <input type="hidden" name="start_verse"/>
     <input type="hidden" name="end_book_id"/>
     <input type="hidden" name="end_chapter"/>
-    <input type="hidden" name="end_verse"/>
 
     <select name="privacy">
         <option value="public">public</option>
         <option value="private">private</option>
-    </select>
-    <select name="type">
-        <option value="note">note</option>
-        <option value="tag">tag</option>
     </select>
 
     <button>send</button>
