TEMP: submit button for note form

--- a/script/template/form.html
+++ b/script/template/form.html
@@ -17,4 +17,6 @@
     <input type="hidden" name="start_chapter"/>
     <input type="hidden" name="end_book_id"/>
     <input type="hidden" name="end_chapter"/>
+
+    <input type="submit"/>
 </form>
