CSS3 Media Query Implementation
First experimental implementation of CSS3 Media Queries to optimize
viewing. The goal is to automatically switch between single-column and
multicolumn views when needed.

--- a/script/style/design.css
+++ b/script/style/design.css
@@ -85,6 +85,10 @@ input
 {
     box-shadow: 0px 0px 5px black;
 }
+#bible .column.two
+{
+    border-right: 1px solid gray;
+}
 #bible .column .chapter
 {
     padding: 0.7em;
