--- a/script/style/design.css
+++ b/script/style/design.css
@@ -88,6 +88,7 @@ input
 }
 #bible .column.two
 {
+    margin-top: 1em;
     border: 1px solid gray;
     border-left: none;
     border-radius: 0 5px 5px 0;
@@ -177,4 +178,41 @@ input
 {
     font-size: 1.2em;
     float: right;
+}
+
+
+
+.passage
+{
+    border-bottom: 1px solid black;
+    width: 100%;
+    height: 6em;
+    position: relative;
+}
+.passage:last-child
+{
+    border: none;
+}
+.passage .note
+{
+    position: absolute;
+    width: 100%;
+    top: 0;
+}
+.passage .tags
+{
+    border-top: 1px solid black;
+    position: absolute;
+    width: 70%;
+    bottom: 0.5em;
+    height: 1em;
+}
+.passage .actions
+{
+    position: absolute;
+    width: 30%;
+    bottom: 0.5em;
+    right: 0;
+    height: 1em;
+    text-align: center;
 }
