--- a/script/style/style.css
+++ b/script/style/style.css
@@ -1,31 +1,3 @@
-@import url('reset.css');
-
-#nav
-{
-    position: fixed;
-    z-index: 2;
-    display: none;
-}
-
-.column
-{
-    position: absolute;
-}
-
-.column.one
-{
-    left: 0;
-    z-index: 1;
-}
-
-.column.two
-{
-    right: 0;
-    display: none;
-}
-
-#bible .chapter
-{
-    -webkit-column-count: 2;
-    -webkit-column-gap: 2em;
+.navbar select {
+    width: auto;
 }
