Fixed usercontent form rendering, added index fields

--- a/script/template/form.html
+++ b/script/template/form.html
@@ -15,8 +15,10 @@
 
     <input type="hidden" name="start_book_id"/>
     <input type="hidden" name="start_chapter"/>
+    <input type="hidden" name="start_index"/>
     <input type="hidden" name="end_book_id"/>
     <input type="hidden" name="end_chapter"/>
+    <input type="hidden" name="end_index"/>
 
     <input type="submit"/>
 </form>
