Add ids to user content I/O

--- a/script/template/form.html
+++ b/script/template/form.html
@@ -12,6 +12,7 @@
 
     <input type="hidden" name="action" value="new"/>
     <input type="hidden" name="translation"/>
+    <input type="hidden" name="id"/>
 
     <input type="hidden" name="start_book_id"/>
     <input type="hidden" name="start_chapter"/>
